Updated with ZF navbar logo and favicon

--- a/base.html
+++ b/base.html
@@ -7,9 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">{% if page_description %}
     <meta name="description" content="{{ page_description }}">{% endif %} {% if site_author %}
     <meta name="author" content="{{ site_author }}">{% endif %} {% if canonical_url %}
-    <link rel="canonical" href="{{ canonical_url }}">{% endif %} {% if favicon %}
-    <link rel="shortcut icon" href="{{ base_url }}/{{ favicon }}">{% else %}
-    <link rel="shortcut icon" href="{{ base_url }}/img/favicon.ico">{% endif %}
+    <link rel="canonical" href="{{ canonical_url }}">{% endif %}
+    <link rel="shortcut icon" href="{{ base_url }}/img/favicon.ico">
 
     <title>{% if page_title %}{{ page_title }} - {% endif %}{{ site_name }}</title>
 
