--- a/nav.html
+++ b/nav.html
@@ -14,7 +14,10 @@
             {% endif %}
 
             <!-- Main title -->
-            <a class="navbar-brand" href="{{ homepage_url }}">{{ site_name }}</a>
+            <span class="navbar-brand">
+              <a href="http://framework.zend.com"><img src="{{ base_url }}/img/zf-logo-mark.png" height="28" alt="Zend Framework" /></a>
+              <a href="{{ homepage_url }}">{{ site_name }}</a>
+            </span>
         </div>
 
         <!-- Expanded navigation -->
