--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="zend-expressive: PSR-7 Middleware Microframework">   
+    <meta name="description" content="zend-expressive: PSR-7 Middleware Microframework">  
     <link rel="shortcut icon" href="./img/favicon.ico">
 
     <title>Expressive</title>
@@ -55,7 +55,10 @@
             
 
             <!-- Main title -->
-            <a class="navbar-brand" href=".">Expressive</a>
+            <span class="navbar-brand">
+              <a href="http://framework.zend.com"><img src="./img/zf-logo-mark.png" height="28" alt="Zend Framework" /></a>
+              <a href=".">Expressive</a>
+            </span>
         </div>
 
         <!-- Expanded navigation -->
@@ -561,5 +564,5 @@ middleware application today!</p>
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-01-23 18:08:25.538341
+Build Date UTC : 2016-01-23 21:44:30.475299
 -->
