Implemented landing page

--- a/404.html
+++ b/404.html
@@ -449,6 +449,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
 
@@ -462,6 +463,7 @@
 
 
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
