--- a/cookbook/custom-404-page-handling/index.html
+++ b/cookbook/custom-404-page-handling/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -613,6 +614,7 @@ middleware, as you only want it to execute if no routed middleware was selected.
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
