--- a/base.html
+++ b/base.html
@@ -64,12 +64,14 @@
 
     {% include "nav.html" %}
 
+    <!-- content:begin -->
     <div class="container">
         {% block content %}
         <div class="col-md-3">{% include "toc.html" %}</div>
         <div class="col-md-9" role="main">{% include "content.html" %}</div>
         {% endblock %}
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
