--- a/cookbook/debug-toolbars/index.html
+++ b/cookbook/debug-toolbars/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -582,6 +583,7 @@ settings.</p>
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
