--- a/cookbook/setting-locale-without-routing-parameter/index.html
+++ b/cookbook/setting-locale-without-routing-parameter/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -694,6 +695,7 @@ class RedirectActionFactory
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
