--- a/cookbook/using-custom-view-helpers/index.html
+++ b/cookbook/using-custom-view-helpers/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -519,6 +520,7 @@ for information on how to populate this configuration.</p>
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
