--- a/cookbook/using-routed-middleware-class-as-controller/index.html
+++ b/cookbook/using-routed-middleware-class-as-controller/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -739,6 +740,7 @@ class AlbumPage extends AbstractPage
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
