--- a/features/container/aura-di/index.html
+++ b/features/container/aura-di/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -620,6 +621,7 @@ $app-&gt;run();</code></pre>
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
