--- a/features/container/factories/index.html
+++ b/features/container/factories/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -830,6 +831,7 @@ serverurl helpers, <code>Zend\Expressive\ZendView\UrlHelper</code> and
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
