--- a/features/container/pimple/index.html
+++ b/features/container/pimple/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -583,6 +584,7 @@ provide; this could be accomplished via an environment variable.</p>
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
