--- a/features/router/aura/index.html
+++ b/features/router/aura/index.html
@@ -448,6 +448,7 @@
     </div>
 </div>
 
+    <!-- content:begin -->
     <div class="container">
         
         <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
@@ -720,6 +721,7 @@ $container['Zend\Expressive\Router\RouterInterface'] = new RouterFactory();</cod
 </nav></div>
         
     </div>
+    <!-- content:end -->
 
     <footer class="col-md-12 text-center">
         <hr>
