--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@ $ composer create-project -s rc zendframework/zend-expressive-skeleton expressiv
         </div>
     </div></div>
 
-    <h3>Applications, Simplfied</h3>
+    <h3>Applications, Simplified</h3>
 
     <div class="container"><div class="row">
         <div class="col-xs-8">
@@ -671,5 +671,5 @@ $app->get('/path', $pathMiddleware);
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-01-25 21:16:57.396109
+Build Date UTC : 2016-01-25 22:13:54.617841
 -->
