Made installer image responsive

--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@ $ composer create-project -s rc zendframework/zend-expressive-skeleton expressiv
 
     <div class="container"><div class="row">
         <div class="col-xs-8">
-          <img src="images/installer.png" alt="Expressive Installer" /><br />
+          <img class="img-responsive" src="images/installer.png" alt="Expressive Installer" /><br />
         </div>
       
         <div class="col-xs-4">
@@ -671,5 +671,5 @@ $app->get('/path', $pathMiddleware);
 
 <!--
 MkDocs version : 0.15.0
-Build Date UTC : 2016-01-25 22:37:46.542578
+Build Date UTC : 2016-01-26 14:19:51.504695
 -->
