Updated with responsive images

--- a/getting-started/features/index.html
+++ b/getting-started/features/index.html
@@ -549,7 +549,7 @@ features it provides include:</p>
   error handler for production, and a Whoops-based error handler for development.</p>
 <h2 id="flow-overview">Flow Overview</h2>
 <p>Below is a diagram detailing the workflow used by Expressive.</p>
-<p><img alt="Expressive Architectural Flow" src="../../images/architecture.png" /></p>
+<p><img alt="Expressive Architectural Flow" src="../../images/architecture.png" class="img-responsive"/></p>
 <p>The <code>Application</code> acts as an "onion"; in the diagram above, the top is the
 outer-most layer of the onion, while the bottom is the inner-most.</p>
 <p>The <code>Application</code> dispatches each middleware. Each middleware accepts a
