Removing the use of 'sane'
RE: point 1 of the code manifesto, really. This might sound like nitpicking, but I think we'd probably be better off avoiding these references to mental health; thoughts?

--- a/features/application/index.html
+++ b/features/application/index.html
@@ -511,7 +511,7 @@ that composes:</p>
 <p>You can define the <code>Application</code> instance in several ways:</p>
 <ul>
 <li>Direct instantiation, which requires providing several dependencies.</li>
-<li>The <code>AppFactory</code>, which will use sane defaults, but allows injecting alternate
+<li>The <code>AppFactory</code>, which will use some common defaults, but allows injecting alternate
   container and/or router implementations.</li>
 <li>Via a dependency injection container; we provide a factory for setting up all
   aspects of the instance via configuration and other defined services.</li>
