Fixing typo in footer

--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@ $app->get('/path', $pathMiddleware);
               <p>
                 <strong>Zend Framework</strong><br />
                 <a href="http://framework.zend.com/">framework.zend.com</a><br />
-                <a href="https://docs.zendframeork.com">docs.zendframework.com</a><br />
+                <a href="https://docs.zendframework.com">docs.zendframework.com</a><br />
                 <a href="https://packages.zendframework.com">packages.zendframework.com</a><br />
                 <a href="https://apigility.org">apigility.org</a><br />
               </p>
@@ -831,5 +831,5 @@ $app->get('/path', $pathMiddleware);
 
 <!--
 MkDocs version : 0.15.3
-Build Date UTC : 2016-06-28 11:21:11.961782
+Build Date UTC : 2016-06-28 16:35:30.668604
 -->
