--- a/cookbook/modular-layout/index.html
+++ b/cookbook/modular-layout/index.html
@@ -659,7 +659,7 @@ instead of parsing and merging the various configuration sources.</p>
               <p>
                 <strong>Zend Framework</strong><br />
                 <a href="http://framework.zend.com/">framework.zend.com</a><br />
-                <a href="https://docs.zendframeork.com">docs.zendframework.com</a><br />
+                <a href="https://docs.zendframework.com">docs.zendframework.com</a><br />
                 <a href="https://packages.zendframework.com">packages.zendframework.com</a><br />
                 <a href="https://apigility.org">apigility.org</a><br />
               </p>
