--- a/features/container/factories/index.html
+++ b/features/container/factories/index.html
@@ -846,7 +846,7 @@ serverurl helpers, <code>Zend\Expressive\ZendView\UrlHelper</code> and
               <p>
                 <strong>Zend Framework</strong><br />
                 <a href="http://framework.zend.com/">framework.zend.com</a><br />
-                <a href="https://docs.zendframeork.com">docs.zendframework.com</a><br />
+                <a href="https://docs.zendframework.com">docs.zendframework.com</a><br />
                 <a href="https://packages.zendframework.com">packages.zendframework.com</a><br />
                 <a href="https://apigility.org">apigility.org</a><br />
               </p>
