--- a/features/container/intro/index.html
+++ b/features/container/intro/index.html
@@ -565,7 +565,7 @@ for it). We try to keep these to a minimum, however.</p>
               <p>
                 <strong>Zend Framework</strong><br />
                 <a href="http://framework.zend.com/">framework.zend.com</a><br />
-                <a href="https://docs.zendframeork.com">docs.zendframework.com</a><br />
+                <a href="https://docs.zendframework.com">docs.zendframework.com</a><br />
                 <a href="https://packages.zendframework.com">packages.zendframework.com</a><br />
                 <a href="https://apigility.org">apigility.org</a><br />
               </p>
