--- a/features/emitters/index.html
+++ b/features/emitters/index.html
@@ -549,7 +549,7 @@ on the stack will be evaluated last.</p>
               <p>
                 <strong>Zend Framework</strong><br />
                 <a href="http://framework.zend.com/">framework.zend.com</a><br />
-                <a href="https://docs.zendframeork.com">docs.zendframework.com</a><br />
+                <a href="https://docs.zendframework.com">docs.zendframework.com</a><br />
                 <a href="https://packages.zendframework.com">packages.zendframework.com</a><br />
                 <a href="https://apigility.org">apigility.org</a><br />
               </p>
